yorum bloğu güncellemeleri

--- a/src/reduced-motion.scss
+++ b/src/reduced-motion.scss
@@ -5,11 +5,11 @@
 
 /*
 	Remove
-	(1) animations (opinionated),
-	(2) fixed background attachments (opinionated),
-	(3) timed scrolling behaviors (opinionated),
-	(4) ransitions (opinionated)
-	(5) hide marquee elements (opinionated)
+	(1) animations 						(opinionated),
+	(2) fixed background attachments 	(opinionated),
+	(3) timed scrolling behaviors 		(opinionated),
+	(4) ransitions 						(opinionated),
+	(5) hide marquee elements 			(opinionated)
 	when motion is reduced.
 */
 
