--- a/src/reduced-motion.scss
+++ b/src/reduced-motion.scss
@@ -1,6 +1,11 @@
 /*!
+	reduced-motion.css
+	@description Reduced all animations for performance
+
 	@author drementer
-	@license MIT (https://github.com/drementer/reduced-motion.css/blob/master/LICENSE) 	 
+	@version 1.0.2
+	@license MIT
+	@see {@link https://github.com/drementer/reduced-motion.css} 
 */
 
 /*
